--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,28 @@
 --- #YAML:1.0
-name:                AnyEvent-Twitter
-version:             0.1
-abstract:            Implementation of the Twitter API for AnyEvent
-license:             perl
-author:              
+name:               AnyEvent-Twitter
+version:            0.2
+abstract:           Implementation of the Twitter API for AnyEvent
+author:
     - Robin Redeker <elmex@x-paste.de>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    AnyEvent:                      3.5
-    AnyEvent::HTTP:                0
-    JSON:                          0
-    MIME::Base64:                  0
-    Object::Event:                 0
-    Scalar::Util:                  0
-    Test::More:                    0
-    URI::URL:                      0
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    AnyEvent:        3.5
+    AnyEvent::HTTP:  0
+    Encode:          0
+    JSON:            0
+    MIME::Base64:    0
+    Object::Event:   0
+    Scalar::Util:    0
+    Test::More:      0
+    URI::URL:        0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.46
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
