--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               AnyEvent-Twitter
-version:            0.2
+version:            0.21
 abstract:           Implementation of the Twitter API for AnyEvent
 author:
     - Robin Redeker <elmex@x-paste.de>
@@ -8,9 +8,12 @@ license:            perl
 distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
     AnyEvent:        3.5
     AnyEvent::HTTP:  0
+    common::sense:   0
     Encode:          0
     JSON:            0
     MIME::Base64:    0
@@ -22,7 +25,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.46
+generated_by:       ExtUtils::MakeMaker version 6.54
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
