Import of ELMEX/AnyEvent-Twitter-0.25 from CPAN.
gitpan-cpan-distribution: AnyEvent-Twitter
gitpan-cpan-version:      0.25
gitpan-cpan-path:         ELMEX/AnyEvent-Twitter-0.25.tar.gz
gitpan-cpan-author:       ELMEX
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               AnyEvent-Twitter
-version:            0.21
+version:            0.25
 abstract:           Implementation of the Twitter API for AnyEvent
 author:
     - Robin Redeker <elmex@x-paste.de>
@@ -25,7 +25,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.54
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
