Import of ELMEX/AnyEvent-Twitter-0.26 from CPAN.
gitpan-cpan-distribution: AnyEvent-Twitter
gitpan-cpan-version:      0.26
gitpan-cpan-path:         ELMEX/AnyEvent-Twitter-0.26.tar.gz
gitpan-cpan-author:       ELMEX
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               AnyEvent-Twitter
-version:            0.25
+version:            0.26
 abstract:           Implementation of the Twitter API for AnyEvent
 author:
     - Robin Redeker <elmex@x-paste.de>
@@ -20,6 +20,7 @@ requires:
     Object::Event:   0
     Scalar::Util:    0
     Test::More:      0
+    Time::Local:     0
     URI::URL:        0
 no_index:
     directory:
