--- a/META.yml
+++ b/META.yml
@@ -19,14 +19,15 @@ no_index:
     - t
     - xt
 requires:
-  AnyEvent: 0
-  AnyEvent::HTTP: 0
-  Digest::SHA: 0
-  JSON: 0
-  Net::OAuth: 0
-  Net::Twitter::Lite: 0
+  AnyEvent: 5.34
+  AnyEvent::HTTP: 2.12
+  Digest::SHA: 5.62
+  JSON: 2.53
+  Net::OAuth: 0.27
+  URI: 1.58
+  URI::Escape: 3.3
   perl: 5.8.0
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/punytan/AnyEvent-Twitter.git
-version: 0.53
+version: 0.62
