--- a/META.yml
+++ b/META.yml
@@ -28,10 +28,11 @@ requires:
   JSON: 2.53
   Net::OAuth: 0.27
   Net::SSLeay: 1.35
+  Time::Piece: 1.2
   URI: 1.58
   URI::Escape: 3.3
   perl: 5.8.0
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/punytan/AnyEvent-Twitter.git
-version: 0.63
+version: 0.64
